--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,9 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 Message Board
+  each message in messages 
+    p= message.text
+    p= message.user 
+    p= message.added
+
