--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,4 +4,11 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    header
+      nav
+        ul 
+          li 
+            a(href="/new") New Post
+          li
+            a(href="/") Message Board
     block content
